<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/font">
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:maxLength="45"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:hint="@string/login"
        android:maxLength="45"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:maxLength="45"
        android:paddingLeft="16dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/re_passwordEditText"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext"
        android:hint="@string/re_password"
        android:password="true"
        android:maxLength="45"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:hint="@string/register"
        android:textColorHint="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_passwordEditText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/iHaveAccountButton"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:hint="@string/i_have_account"
        android:textColorHint="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>