<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentWorker"
    android:background="@color/font">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="229dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/movie"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            app:layout_constraintVertical_bias="0.326">
            <EditText
                android:id="@+id/emailwEditText"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:background="@drawable/edittext"
                android:hint="@string/email"
                android:maxLength="45"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:id="@+id/loginwEditText"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:background="@drawable/edittext"
                android:hint="@string/login"
                android:maxLength="45"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/passwordwEditText"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:background="@drawable/edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="45"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/signInwButton"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:background="@drawable/button"
                android:hint="@string/sign_in"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>