<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgText"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"/>
    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/gener"/>
        <TextView
            android:id="@+id/generText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/limitation" />
        <TextView
            android:id="@+id/limitationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </LinearLayout>

        <Button
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/bron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bron"
            android:background="@drawable/button"
            android:textColor="@color/white"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/red"/>
</LinearLayout>